@@ -1,5 +1,9 @@
 2007-04-28  Vitaly Alexeev <tishka92@yahoo.com>
 
+	* gameswf/gameswf_3ds.*: added camera
+
+2007-04-28  Vitaly Alexeev <tishka92@yahoo.com>
+
 	* base/tu_config.h,
 	* gameswf/gameswf_sound_handler_sdl.*: 
 	* gameswf/gameswf_as_classes/as_db.*,
